# yuno-backend

./: .env.dist  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pgadmin.yml
.github/: dependabot.yml
pgadmin/: servers.json
scripts/sql/: init.sql  task_update_percent_completed_trigger.sql
src/: .dockerignore  .env.dist  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 2022_12_08_2107-169267038d18_.py  2022_12_10_1355-77e0988e752b_.py  2022_12_16_1042-40d84d4e2be3_.py  2022_12_16_1048-2f579bca7ed2_.py  2022_12_16_1743-a1365fc39f95_.py  2023_01_02_1647-59a400324b45_.py  2023_01_11_2038-1b328c7c4f0f_.py  2023_01_11_2102-40068ac95f4d_.py  2023_01_12_0730-2529154798f0_.py  2023_01_12_0848-2504374ce9c0_.py  2023_01_12_0943-d5e83d0242cb_.py  2023_01_12_1816-ecf5786bc002_.py  2023_01_19_1242-e23b635c926e_.py  2023_01_19_1251-27ef60460a81_.py  2023_01_19_1306-2ffa84639104_.py  2023_01_30_1532-3360439ada52_.py  2023_02_14_1054-7f9cfb7bdf08_.py  2023_05_24_1846-aaa4d698d4d6_.py
src/app/: asgi.py  config.py  database.py  initial_data.py  logging.py  main.py
src/app/api/: deps.py  ping.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: auth.py  login.py  project.py  role.py  task.py  user.py
src/app/core/: config.py  logging.py  security.py
src/app/crud/: __init__.py  base_crud.py  project_crud.py  role_crud.py  task_crud.py  user_crud.py
src/app/db/: init_db.py  session.py
src/app/models/: __init__.py  base_uuid_model.py  image_media_model.py  links_model.py  media_model.py  project_model.py  project_user_model.py  project_users_model.py  role_model.py  task_model.py  user_model.py
src/app/repository/: base_crud.py  image_media_crud.py  project_crud.py  role_crud.py  task_crud.py  user_crud.py
src/app/schemas/: auth_schema.py  common_schema.py  image_media_schema.py  media_schema.py  project_schema.py  response_schema.py  role_schema.py  statistics_schema.py  task_schema.py  token_schema.py  user_schema.py
src/app/tasks/: __init__.py  email.py  media.py  project.py
src/app/templates/: verification_email.html
src/app/utils/: celery_utils.py  minio_client.py  otp.py  partial.py  resize_image.py  token.py  uuid6.py
src/app/utils/exceptions/: __init__.py  common_exception.py  project_exception.py  user_exceptions.py
src/compose/: Dockerfile
src/compose/celery/worker/: start
src/compose/local/: Dockerfile  Dockerfile.pip  start
src/compose/local/celery/worker/: start
src/compose/production/: Dockerfile  Dockerfile.pip  start
src/compose/production/celery/flower/: start
src/deploy/local/: Dockerfile  Dockerfile.pip
src/deploy/production/: Dockerfile
src/deploy/production/celery/flower/: start
src/proto/mail/: mail.proto
src/requirements/: base.txt  dev.txt
src/tests/: conftest.py
src/tests/api/: test_auth.py  test_token.py
