[tool.poetry]
name = "app"
version = "0.2.1"
description = "Task management backend service"
authors = ["8thgencore <8th@example.com>"]

[tool.poetry.dependencies]
# Python version
python = "^3.11"
# FastApi and Extencions
fastapi = { extras = ["all"], version = "^0.111.0" }
fastapi-cache2 = { extras = ["redis"], version = "^0.2.1" }
fastapi-pagination = { extras = ["sqlalchemy"], version = "^0.12.24" }
fastapi-async-sqlalchemy = "^0.6.1"
python-multipart = "^0.0.9"
asyncer = "^0.0.7"
# ASGI server
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"
# Database
sqlmodel = "^0.0.19"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
# For S3
minio = "^7.2.7"
Pillow = "^10.3.0"
# Celery
redis = "^4.6.0"
celery = "^5.4.0"
flower = "^2.0.1"
watchfiles = "^0.22.0"
# Logger
loguru = "^0.7.2"
# Cryptography
bcrypt = "^4.1.3"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
# gRPC
grpcio = "^1.64.1"
protobuf = "^5.27.1"

[tool.poetry.group.dev.dependencies]
yesqa = "^1.5.0"
httpx = "^0.27.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.8"
interrogate = "^1.7.0"
pre-commit = "^3.7.1"
# mypy
mypy = "^1.10.0"
types-python-dateutil = "^2.9.0.20240316"
types-redis = "^4.6.0.20240425"
types-ujson = "^5.10.0.20240515"
grpcio-tools = "^1.64.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", "alembic"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
lint.ignore = [
    "B904",
    "B006",
    "E501", # line too long, handled by black
    "E712", # in sqlmodel better used ==
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["alembic", "__pycache__"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
